fixed spacing issue in media query 640

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,7 +294,7 @@ input[type=submit] {
    position: static;
  }
 
- .main-section {
+ #main-container {
    padding-top: 0;
  }
 
